Bug 131123 - Choosing to close chat tab after adding to ignore list crashes Konversation
Summary: Choosing to close chat tab after adding to ignore list crashes Konversation
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-20 17:56 UTC by Leticia Hernández
Modified: 2006-07-24 17:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leticia Hernández 2006-07-20 17:56:09 UTC
Version:            (using KDE KDE 3.5.3)
Installed from:    Ubuntu Packages
OS:                Linux

To reproduce this crash: In a private chat window, right-click the user name and select Ignore. When Konversation asks if you would like to close the window, say Yes. At this point Konvi crashes. If you choose to keep the window open the behaviour is normal.

I'm sorry I can't provide a backtrace because the third or fourth time I choose to keep the window open and not to ask again.

I'm using the Kubuntu semi-official KDE 3.5.3 packages.
Comment 1 Andreas Kling 2006-07-24 17:01:26 UTC
SVN commit 565822 by kling:

Fixed dangling pointer dereference when doing an ignore-and-close in query window.

BUG: 131123


 M  +1 -1      server.cpp  


--- trunk/extragear/network/konversation/src/server.cpp #565821:565822
@@ -1932,7 +1932,7 @@
         // else select next query
         else lookQuery=queryList.next();
     }
-    delete query;
+    query->deleteLater();
 }
 
 void Server::sendJoinCommand(const QString& name, const QString& password)