Fixed dangling pointer dereference when doing an ignore-and-close in query window.

BUG: 131123

svn path=/trunk/extragear/network/konversation/; revision=565822